name:                hs-goroutines
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mrwonko/hs-goroutines#readme
license:             BSD3
license-file:        LICENSE
author:              Willi Schinmeyer
maintainer:          willi@schinmeyer.de
copyright:           2017 Willi Schinmeyer
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hs-goroutines
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
